Fix bug with collapse button non-visible colors

--- a/css/custom-bootstrap.css
+++ b/css/custom-bootstrap.css
@@ -21,3 +21,7 @@
     vertical-align: middle;
     float: none;
 }
+
+.icon-bar {
+    background-color: #555;
+}
